ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: taskcluster-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
        $flatten:
        - path: '/'
          backend:
            serviceName: taskcluster-tools
            servicePort: 80
        - path: '/docs'
          backend:
            serviceName: taskcluster-docs
            servicePort: 80
        - path: '/references/'
          backend:
            serviceName: taskcluster-references
            servicePort: 80
        - path: '/schemas/'
          backend:
            serviceName: taskcluster-references
            servicePort: 80
        - $map:
            - {service_name: auth, project_name: taskcluster-auth}
            - {service_name: secrets, project_name: taskcluster-secrets}
            - {service_name: queue, project_name: taskcluster-queue}
            - {service_name: hooks, project_name: taskcluster-hooks}
            - {service_name: index, project_name: taskcluster-index}
            - {service_name: gce-provider, project_name: gce-provider}
            - {service_name: events, project_name: taskcluster-events}
            - {service_name: notify, project_name: taskcluster-notify}
            - {service_name: github, project_name: taskcluster-github}
          each(svc):
            $if: '!(svc.project_name in disabled_services)'
            then:
              path: '/api/${svc.service_name}/'
              backend:
                serviceName: ${svc.project_name}
                servicePort: 80
